# src/entities/Article/index.ts
@@ -30,4 +30,12 @@ export { ArticleTypeTabs } from './ui/ArticleTypeTabs/ArticleTypeTabs';
 
 export type { ArticleDetailsSchema } from './model/types/articleDetailsSchema';
 
+export type {
+    Highlights,
+    ArticleTeaser,
+    SnippetTeaser,
+} from './model/types/highlights';
+
+export { useHighlights } from './api/highlightsApi';
+
 export { getArticleDetailsData } from './model/selectors/articleDetails';
